<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="edu.wit.mobileapp.lab4.Calculator"
    tools:layout_editor_absoluteY="81dp">


    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="70dp"
        android:layout_marginTop="120dp"
        android:text="@string/title"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="21sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/gender"
        android:layout_width="68dp"
        android:layout_height="30dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="60dp"
        android:text="@string/gender"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@id/radioButton_Male"
        app:layout_constraintStart_toStartOf="@id/textView5"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />


    <RadioButton
        android:id="@+id/radioButton_Male"
        android:layout_width="69dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:text="@string/male"
        app:layout_constraintTop_toBottomOf="@+id/textView5"
        app:layout_constraintStart_toStartOf="@id/textView5"
        app:layout_constraintEnd_toEndOf="@id/textView5"
        tools:layout_editor_absoluteX="158dp" />

    <RadioButton
        android:id="@+id/radioButton_Female"
        android:layout_width="88dp"
        android:layout_height="32dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="60dp"
        android:text="@string/female"
        app:layout_constraintStart_toEndOf="@id/radioButton_Male"
        app:layout_constraintTop_toBottomOf="@id/textView5" />

    <TextView
        android:id="@+id/height"
        android:layout_width="68dp"
        android:layout_height="30dp"
        android:layout_marginTop="24dp"
        android:text="@string/height"
        android:textColor="#000000"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@id/gender"
        app:layout_constraintTop_toBottomOf="@+id/radioButton_Male" />

    <EditText
        android:id="@+id/feet"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintStart_toEndOf="@id/height"
        app:layout_constraintTop_toBottomOf="@+id/radioButton_Male" />


    <TextView
        android:id="@+id/feet_field"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="24dp"
        android:text="@string/feet"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@id/feet"
        app:layout_constraintTop_toBottomOf="@+id/radioButton_Male" />

    <EditText
        android:id="@+id/inches"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintStart_toEndOf="@id/feet_field"
        app:layout_constraintTop_toBottomOf="@+id/radioButton_Male" />

    <TextView
        android:id="@+id/inches_field"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_marginTop="24dp"
        android:text="@string/inch"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@+id/inches"
        app:layout_constraintTop_toBottomOf="@id/radioButton_Male" />

    <Button
        android:id="@+id/myBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/calc"
        android:layout_marginTop="200dp"
        app:layout_constraintStart_toStartOf="@id/textView5"
        app:layout_constraintTop_toBottomOf="@id/textView5"
        app:layout_constraintEnd_toEndOf="@id/textView5"/>

</android.support.constraint.ConstraintLayout>